fix: optimized container height not showing scrollbars

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -164,7 +164,7 @@ html.dark {
 // CSS 全局变量
 :root {
   --console-margin: 20px; // 工作台盒子间距
-  --art-card-border: rgba(var(--art-gray-300-rgb), 0.7); // 卡片边框颜色
+  --art-card-border: rgba(var(--art-gray-300-rgb), 0.6); // 卡片边框颜色
   --art-card-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.04); // 卡片阴影
 }
 
