--- a/src/components/Layout/WorkTab/style.scss
+++ b/src/components/Layout/WorkTab/style.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: space-between;
   width: 100%;
-  padding: 0 20px;
+  padding: 0 20px 10px;
   user-select: none;
   background: var(--art-bg-color);
 
